--- a/8/package.json
+++ b/8/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.2",
+    "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
     "mysql2": "^3.3.3",
     "path": "^0.12.7"
